<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo_pic"
                android:layout_marginTop="100dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/reset_password"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/code"
                android:textAlignment="center"
                android:id="@+id/code"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:textAllCaps="true"
                tools:ignore="TextFields" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textAlignment="center"
                android:id="@+id/password"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:textAllCaps="true"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/password_confirm"
                android:textAlignment="center"
                android:id="@+id/password_confirm"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:textAllCaps="true"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/round_pink_button"
                android:onClick="ResetBtnAction"
                android:text="@string/submit"
                android:textColor="#FFFFFF"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/Reslogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:padding="8dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>

