<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo_pic"
                android:layout_marginTop="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:layout_margin="16dp"
                android:padding="8dp"/>


            <EditText
                android:id="@+id/last_name"
                android:hint="Name"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_margin="16dp"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_margin="16dp"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_margin="16dp"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/password_confirm"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_margin="16dp"
                android:padding="8dp"/>


            <EditText
                android:id="@+id/mob_number"
                android:hint="@string/mob_number"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_margin="16dp"
                android:padding="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                android:gravity="center"
                android:text="Region" />

            <Spinner
                android:id="@+id/cities"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_margin="8dp"
                />

            <Button
                android:onClick="RegisterBtnAction"
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/round_pink_button"
                android:textColor="#FFFFFF"
                android:layout_margin="16dp"/>

            <TextView
                android:id="@+id/Reslogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:padding="8dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>

