<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo_pic"
                android:layout_marginTop="100dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:gravity="center_vertical"
                android:layout_margin="16dp"
                android:padding="8dp"
                android:textColor="@android:color/black"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:hint="username"
                android:inputType="text"
                android:padding="8dp"
                android:text="admin"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:text="123456"
                android:textAlignment="center"
                android:textAllCaps="true" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/round_pink_button"
                android:onClick="LoginBtnAction"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:layout_margin="16dp"/>

            <TextView
                android:text="@string/register"
                android:onClick="RegisterBtnAction"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="16dp"
                android:padding="8dp"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="Guest"
                android:padding="8dp"
                android:text="Guest"
                android:visibility="visible" />

            <TextView
                android:id="@+id/Reslogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_margin="16dp"
                android:padding="8dp"/>


        </LinearLayout>

    </ScrollView>
</RelativeLayout>

